--- a/compute/encryption/requirements.txt
+++ b/compute/encryption/requirements.txt
@@ -1,5 +1,5 @@
 cryptography>=2.3
-requests==2.18.4
+requests>=2.20.0
 google-api-python-client==1.6.5
 google-auth==1.3.0
 google-auth-httplib2==0.0.3
