--- a/testing/requirements.txt
+++ b/testing/requirements.txt
@@ -4,7 +4,7 @@ flaky==3.4.0
 funcsigs==1.0.2
 mock==2.0.0
 mysql-python==1.2.5; python_version < "3.0"
-PyCrypto==2.6.1
+PyCrypto>=2.6.1
 pytest-cov==2.5.1
 pytest==3.4.0
 pyyaml>=4.2b1
